# talks

./: .gitignore  .gitleaks.toml  .gitmodules  CNAME  feedback.html  index.html  video-and-slide-links.rst
2012-03-07-python-fp/: OUTLINE
2012-10-03-perl-test-builder-clutch/: antitest.t  clutch.t
20120307-python-fp/: monad.py  python_fp.odp
20121003-perl-test-builder-clutch/: DuckDuckGo.pm  duckduckgo.pl  duckduckgo.t  talk.pin
2013-02-01-lca2013-igor-ci/: igor.odp
20130625-bfpg-aeson/: index.html
20130807-python-elk/: index.html
2014-06-24-bfpg-cis194wk5/: 00.title.slide.hs  21.parametricity.slide.hs  22.parametricity.slide.hs  23.parametricity.slide.hs  41.classes.slide.hs  43.classes.slide.hs  61.standard.slide.hs  62.standard.slide.hs  71.example.slide.hs  73.example.slide.hs  80.homework.slide.hs  81.homework.slide.hs  90.outro.slide.hs  abstract.rst  default.vim
2014-09-23-bfpg-haskell-paas/: build.sh
2014-10-27-warh-parametricity/: parametricity.odp
2014-11-04-osdc-govhask/: build.sh
2014-11-06-osdc-freeipa/: osdc2014-freeipa.odp  proposal.rst
20140624-bfpg-cis194wk5/: 00.title.slide.hs  (+22 more)
20160712-bfpg-hs-rewrite-rules/: rewrite.hs  rules.cabal
2017-05-08-ylj-hs-rewrite-rules/demo/: demo.cabal
2017-05-08-ylj-hs-rewrite-rules/demo/bench/: bench.hs
2017-05-08-ylj-hs-rewrite-rules/demo/src/: Demo.hs
2026-01-21-eo-pki-workshop/curriculum/: 00-intro.md  01-keygen-and-csr.md  CNAME  acme-httpd-mod_md.md  index.md  ipa-certmonger.md  ipa-external-ca.md  ipa-profiles.md  site.cabal  site.hs  subst.txt
2026-01-21-eo-pki-workshop/curriculum/css/: default.css
2026-01-21-eo-pki-workshop/curriculum/modules/: 01-keygen-and-csr.md  acme-httpd-mod_md.md  certificate-transparency.md  ipa-acme.md  ipa-certmonger.md  ipa-external-ca.md  ipa-profiles.md  ipa-smart-cards.md
2026-01-21-eo-pki-workshop/curriculum/templates/: default.html  license.html  module.html  recent.html
(+324 files in other folders)
