name:                rules
version:             0.1.0.0
synopsis:            Rewrite rules lightning talk

license:             MIT
author:              Fraser Tweedale
maintainer:          frase@frase.id.au
copyright:           Copyright (C) 2016  Fraser Tweedale
build-type:          Simple
cabal-version:       >=1.10

executable rewrite
  default-language: Haskell2010
  ghc-options:  -O2 -Wall
  main-is: rewrite.hs
  build-depends:
    base >= 4 && < 5

executable specialise
  default-language: Haskell2010
  ghc-options:  -O2 -Wall
  main-is: specialise.hs
  build-depends:
    base >= 4 && < 5
    , containers
    , criterion
    , deepseq
