name:                demo
version:             0.1.0.0
synopsis:            YLJ17 demo library
license:             BSD3
author:              Fraser Tweedale
maintainer:          frase@frase.id.au
copyright:           Copyright (C) 2017  Fraser Tweedale
category:            Data, Lenses
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:
    Demo
  build-depends:
    base >= 4 && < 5
    , lens
    , text

benchmark bench
  default-language:    Haskell2010
  type: exitcode-stdio-1.0
  main-is: bench.hs
  hs-source-dirs: bench
  build-depends:
    base
    , criterion
    , text
    , demo
