name:               site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:
    base >= 4 && < 5
    , hakyll >= 4.16
    , pandoc >= 2.6
    , pandoc-types >= 1.17.5
  ghc-options:      -threaded -Wall
  default-language: Haskell2010
